Add Log level .env.

--- a/.env.ci
+++ b/.env.ci
@@ -22,6 +22,7 @@ O3SHOP_CONF_COMPILEDIR="/home/runner/work/shop-ce/shop-ce/source/tmp"
 O3SHOP_CONF_ADMINSSLURL=""
 
 ## MISC
+O3SHOP_CONF_LOG_LEVEL="error"
 O3SHOP_CONF_DEBUG=0
 O3SHOP_CONF_ADMINEMAIL=""
 O3SHOP_CONF_SKIPVIEWUSAGE=0
