--- a/source/Setup/.env.dist
+++ b/source/Setup/.env.dist
@@ -20,6 +20,7 @@ O3SHOP_CONF_COMPILEDIR="<sCompileDir>"
 O3SHOP_CONF_ADMINSSLURL=""
 
 ## MISC
+O3SHOP_CONF_LOG_LEVEL="error"
 O3SHOP_CONF_DEBUG=0
 O3SHOP_CONF_ADMINEMAIL=""
 O3SHOP_CONF_SKIPVIEWUSAGE=0
