--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,20 +12,60 @@ jobs:
 
     strategy:
       matrix:
-        php-version: ['7.4', '8.0', '8.1', '8.2']
+        php-version: ['7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
+        database:
+          # MySQL versions
+          - { type: 'mysql', version: '5.5', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '5.7', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '8.0', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '8.1', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '8.2', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '8.3', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '8.4', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '9.0', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '9.1', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '9.2', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '9.3', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mysql', version: '9.4', port: 3306, health-cmd: "mysqladmin ping" }
+          # MariaDB versions
+          - { type: 'mariadb', version: '10.0', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.1', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.2', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.3', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.4', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.5', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.6', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.7', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.8', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.9', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.10', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '10.11', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '11.0', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '11.1', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '11.2', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '11.3', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '11.4', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '11.5', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '11.6', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '11.7', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '11.8', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '12.0', port: 3306, health-cmd: "mysqladmin ping" }
+          - { type: 'mariadb', version: '12.1', port: 3306, health-cmd: "mysqladmin ping" }
       fail-fast: false
 
+    name: PHP ${{ matrix.php-version }} - ${{ matrix.database.type }} ${{ matrix.database.version }}
+
     services:
-      mariadb:
-        image: mariadb:10.10
+      database:
+        image: ${{ matrix.database.type }}:${{ matrix.database.version }}
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: o3shop_test
           MYSQL_USER: o3shop
           MYSQL_PASSWORD: o3shop
         ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+          - ${{ matrix.database.port }}:3306
+        options: --health-cmd="${{ matrix.database.health-cmd }}" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v4
@@ -72,8 +112,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor
-          key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ hashFiles('**/composer.lock') }}
+          key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ matrix.database.type }}-${{ matrix.database.version }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
+            ${{ runner.os }}-php-${{ matrix.php-version }}-${{ matrix.database.type }}-${{ matrix.database.version }}-
             ${{ runner.os }}-php-${{ matrix.php-version }}-
 
       - name: Copy config files
@@ -88,58 +129,58 @@ jobs:
           COMPOSER_ROOT_VERSION: ${{ env.COMPOSER_ROOT_VERSION }}
         run: composer install --prefer-dist --no-progress
 
-
-
       - name: Install theme
         run: |
-          echo "${YELLOW}Installing Wave theme...${NC}"
+          echo "Installing Wave theme..."
 
           # Check if theme is already installed
           if [ -d "source/Application/views/wave" ] && [ "$(ls -A source/Application/views/wave)" ]; then
             echo "Wave theme appears to be already installed, skipping"
-            return 0
+            exit 0
           fi
 
           # Download theme
           echo "Downloading theme from GitHub..."
-          wget -q https://github.com/o3-shop/wave-theme/archive/refs/heads/main.zip -O main.zip || handle_error "Failed to download theme"
+          wget -q https://github.com/o3-shop/wave-theme/archive/refs/heads/main.zip -O main.zip || { echo "Failed to download theme"; exit 1; }
 
           # Extract theme
           echo "Extracting theme..."
-          unzip -q main.zip || handle_error "Failed to extract theme archive"
+          unzip -q main.zip || { echo "Failed to extract theme archive"; exit 1; }
 
           # Copy theme files
           echo "Copying theme files to appropriate directories..."
-          mkdir -p source/out/ || handle_error "Failed to create out directory"
-          cp -r wave-theme-main/out/* source/out/ || handle_error "Failed to copy theme out files"
+          mkdir -p source/out/ || { echo "Failed to create out directory"; exit 1; }
+          cp -r wave-theme-main/out/* source/out/ || { echo "Failed to copy theme out files"; exit 1; }
 
-          mkdir -p source/Application/views/wave || handle_error "Failed to create theme views directory"
+          mkdir -p source/Application/views/wave || { echo "Failed to create theme views directory"; exit 1; }
           rm -rf wave-theme-main/out
-          cp -r wave-theme-main/* source/Application/views/wave || handle_error "Failed to copy theme view files"
+          cp -r wave-theme-main/* source/Application/views/wave || { echo "Failed to copy theme view files"; exit 1; }
 
           # Clean up
           echo "Cleaning up temporary files..."
           rm -rf wave-theme-main
           rm main.zip
 
-          echo "${GREEN}Wave theme installed successfully${NC}"
+          echo "Wave theme installed successfully"
 
-      - name: Wait for MariaDB
+      - name: Wait for Database
         run: |
-          until mysqladmin ping -h 127.0.0.1 -P 3306 -u root -proot --silent; do
-            echo 'Waiting for MariaDB...'
+          until mysqladmin ping -h 127.0.0.1 -P ${{ matrix.database.port }} -u root -proot --silent; do
+            echo 'Waiting for ${{ matrix.database.type }} ${{ matrix.database.version }}...'
             sleep 1
           done
+          echo "${{ matrix.database.type }} ${{ matrix.database.version }} is ready!"
 
       - name: Setup database
         run: |
-          mysql -h 127.0.0.1 -P 3306 -u root -proot -e "CREATE DATABASE IF NOT EXISTS o3shop_test;"
+          mysql -h 127.0.0.1 -P ${{ matrix.database.port }} -u root -proot -e "CREATE DATABASE IF NOT EXISTS o3shop_test;"
 
       - name: Run PHPUnit tests with coverage
         continue-on-error: true
         run: |
           CURRENT_DIR=$(pwd)
           echo "Current directory: $CURRENT_DIR"
+          echo "Testing with PHP ${{ matrix.php-version }} and ${{ matrix.database.type }} ${{ matrix.database.version }}"
 
           php $CURRENT_DIR/vendor/bin/phpunit \
           --bootstrap $CURRENT_DIR/vendor/o3-shop/testing-library/bootstrap.php \
@@ -160,6 +201,7 @@ jobs:
           
           echo "Files in tests directory:"
           ls -la tests/ || echo "No tests directory"
+
       - name: Check coverage files
         run: |
           echo "Checking for coverage files..."
@@ -180,7 +222,7 @@ jobs:
       - name: Upload coverage HTML report
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-report-php-${{ matrix.php-version }}
+          name: coverage-report-php-${{ matrix.php-version }}-${{ matrix.database.type }}-${{ matrix.database.version }}
           path: coverage-html/
 
       - name: Generate coverage summary
@@ -194,7 +236,7 @@ jobs:
               \$percentage = \$total > 0 ? round((\$covered / \$total) * 100, 2) : 0;
               echo \$percentage;
             ")
-            echo "## Coverage Report (PHP ${{ matrix.php-version }})" >> $GITHUB_STEP_SUMMARY
+            echo "## Coverage Report (PHP ${{ matrix.php-version }} - ${{ matrix.database.type }} ${{ matrix.database.version }})" >> $GITHUB_STEP_SUMMARY
             echo "**Coverage: ${COVERAGE}%**" >> $GITHUB_STEP_SUMMARY
             echo "COVERAGE_PERCENTAGE=${COVERAGE}" >> $GITHUB_ENV
           else
@@ -208,7 +250,7 @@ jobs:
           script: |
             const coverage = process.env.COVERAGE_PERCENTAGE;
             if (coverage) {
-              const body = `## 📊 Coverage Report (PHP ${{ matrix.php-version }})
+              const body = `## 📊 Coverage Report (PHP ${{ matrix.php-version }} - ${{ matrix.database.type }} ${{ matrix.database.version }})
             
               **Coverage: ${coverage}%**
             
