--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,32 +14,6 @@ jobs:
       matrix:
         php-version: ['7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
         database:
-          # MySQL versions
-          - { type: 'mysql', version: '5.5', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '5.7', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '8.0', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '8.1', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '8.2', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '8.3', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '8.4', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '9.0', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '9.1', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '9.2', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '9.3', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mysql', version: '9.4', port: 3306, health-cmd: "mysqladmin ping" }
-          # MariaDB versions
-          - { type: 'mariadb', version: '10.0', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.1', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.2', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.3', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.4', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.5', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.6', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.7', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.8', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.9', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.10', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '10.11', port: 3306, health-cmd: "mysqladmin ping" }
           - { type: 'mariadb', version: '11.0', port: 3306, health-cmd: "mysqladmin ping" }
           - { type: 'mariadb', version: '11.1', port: 3306, health-cmd: "mysqladmin ping" }
           - { type: 'mariadb', version: '11.2', port: 3306, health-cmd: "mysqladmin ping" }
@@ -65,7 +39,11 @@ jobs:
           MYSQL_PASSWORD: o3shop
         ports:
           - ${{ matrix.database.port }}:3306
-        options: --health-cmd="${{ matrix.database.health-cmd }}" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=20s
+          --health-timeout=10s
+          --health-retries=10
 
     steps:
       - uses: actions/checkout@v4
