--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ O3SHOP_CONF_ADMINSSLURL=""
 
 ## MISC
 O3SHOP_CONF_LOG_LEVEL="error" #Log Levels: emergency, alert, critical, error, warning, notice, info, debug
-O3SHOP_CONF_LOG_DIR="/../logs" # starting from O3SHOP_CONF_SHOPDIRO3SHOP_CONF_DEBUG=0
+O3SHOP_CONF_LOG_DIR="/../logs" # starting from O3SHOP_CONF_SHOPDIR
 O3SHOP_CONF_ADMINEMAIL=""
 O3SHOP_CONF_SKIPVIEWUSAGE=0
 O3SHOP_CONF_DELSETUPDIR=1
