Revert "Update dependencies."
This reverts commit dbe25d2b79644b87546426785e2ffa5be66d67ee.

--- a/composer.json
+++ b/composer.json
@@ -103,7 +103,7 @@
             }
         },
         "branch-alias": {
-            "dev-main": "dev-b-1.5-changes"
+            "dev-main": "1.4.x-dev"
         }
     },
     "config": {
