--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,38 +12,20 @@ jobs:
 
     strategy:
       matrix:
-        php-version: ['7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
-        database:
-          - { type: 'mariadb', version: '11.0', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '11.1', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '11.2', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '11.3', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '11.4', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '11.5', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '11.6', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '11.7', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '11.8', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '12.0', port: 3306, health-cmd: "mysqladmin ping" }
-          - { type: 'mariadb', version: '12.1', port: 3306, health-cmd: "mysqladmin ping" }
+        php-version: ['7.4', '8.0', '8.1', '8.2']
       fail-fast: false
 
-    name: PHP ${{ matrix.php-version }} - ${{ matrix.database.type }} ${{ matrix.database.version }}
-
     services:
-      database:
-        image: ${{ matrix.database.type }}:${{ matrix.database.version }}
+      mariadb:
+        image: mariadb:10.10
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: o3shop_test
           MYSQL_USER: o3shop
           MYSQL_PASSWORD: o3shop
         ports:
-          - ${{ matrix.database.port }}:3306
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=20s
-          --health-timeout=10s
-          --health-retries=10
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v4
@@ -90,9 +72,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor
-          key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ matrix.database.type }}-${{ matrix.database.version }}-${{ hashFiles('**/composer.lock') }}
+          key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
-            ${{ runner.os }}-php-${{ matrix.php-version }}-${{ matrix.database.type }}-${{ matrix.database.version }}-
             ${{ runner.os }}-php-${{ matrix.php-version }}-
 
       - name: Copy config files
@@ -107,58 +88,58 @@ jobs:
           COMPOSER_ROOT_VERSION: ${{ env.COMPOSER_ROOT_VERSION }}
         run: composer install --prefer-dist --no-progress
 
+
+
       - name: Install theme
         run: |
-          echo "Installing Wave theme..."
+          echo "${YELLOW}Installing Wave theme...${NC}"
 
           # Check if theme is already installed
           if [ -d "source/Application/views/wave" ] && [ "$(ls -A source/Application/views/wave)" ]; then
             echo "Wave theme appears to be already installed, skipping"
-            exit 0
+            return 0
           fi
 
           # Download theme
           echo "Downloading theme from GitHub..."
-          wget -q https://github.com/o3-shop/wave-theme/archive/refs/heads/main.zip -O main.zip || { echo "Failed to download theme"; exit 1; }
+          wget -q https://github.com/o3-shop/wave-theme/archive/refs/heads/main.zip -O main.zip || handle_error "Failed to download theme"
 
           # Extract theme
           echo "Extracting theme..."
-          unzip -q main.zip || { echo "Failed to extract theme archive"; exit 1; }
+          unzip -q main.zip || handle_error "Failed to extract theme archive"
 
           # Copy theme files
           echo "Copying theme files to appropriate directories..."
-          mkdir -p source/out/ || { echo "Failed to create out directory"; exit 1; }
-          cp -r wave-theme-main/out/* source/out/ || { echo "Failed to copy theme out files"; exit 1; }
+          mkdir -p source/out/ || handle_error "Failed to create out directory"
+          cp -r wave-theme-main/out/* source/out/ || handle_error "Failed to copy theme out files"
 
-          mkdir -p source/Application/views/wave || { echo "Failed to create theme views directory"; exit 1; }
+          mkdir -p source/Application/views/wave || handle_error "Failed to create theme views directory"
           rm -rf wave-theme-main/out
-          cp -r wave-theme-main/* source/Application/views/wave || { echo "Failed to copy theme view files"; exit 1; }
+          cp -r wave-theme-main/* source/Application/views/wave || handle_error "Failed to copy theme view files"
 
           # Clean up
           echo "Cleaning up temporary files..."
           rm -rf wave-theme-main
           rm main.zip
 
-          echo "Wave theme installed successfully"
+          echo "${GREEN}Wave theme installed successfully${NC}"
 
-      - name: Wait for Database
+      - name: Wait for MariaDB
         run: |
-          until mysqladmin ping -h 127.0.0.1 -P ${{ matrix.database.port }} -u root -proot --silent; do
-            echo 'Waiting for ${{ matrix.database.type }} ${{ matrix.database.version }}...'
+          until mysqladmin ping -h 127.0.0.1 -P 3306 -u root -proot --silent; do
+            echo 'Waiting for MariaDB...'
             sleep 1
           done
-          echo "${{ matrix.database.type }} ${{ matrix.database.version }} is ready!"
 
       - name: Setup database
         run: |
-          mysql -h 127.0.0.1 -P ${{ matrix.database.port }} -u root -proot -e "CREATE DATABASE IF NOT EXISTS o3shop_test;"
+          mysql -h 127.0.0.1 -P 3306 -u root -proot -e "CREATE DATABASE IF NOT EXISTS o3shop_test;"
 
       - name: Run PHPUnit tests with coverage
         continue-on-error: true
         run: |
           CURRENT_DIR=$(pwd)
           echo "Current directory: $CURRENT_DIR"
-          echo "Testing with PHP ${{ matrix.php-version }} and ${{ matrix.database.type }} ${{ matrix.database.version }}"
 
           php $CURRENT_DIR/vendor/bin/phpunit \
           --bootstrap $CURRENT_DIR/vendor/o3-shop/testing-library/bootstrap.php \
@@ -179,7 +160,6 @@ jobs:
           
           echo "Files in tests directory:"
           ls -la tests/ || echo "No tests directory"
-
       - name: Check coverage files
         run: |
           echo "Checking for coverage files..."
@@ -200,7 +180,7 @@ jobs:
       - name: Upload coverage HTML report
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-report-php-${{ matrix.php-version }}-${{ matrix.database.type }}-${{ matrix.database.version }}
+          name: coverage-report-php-${{ matrix.php-version }}
           path: coverage-html/
 
       - name: Generate coverage summary
@@ -214,7 +194,7 @@ jobs:
               \$percentage = \$total > 0 ? round((\$covered / \$total) * 100, 2) : 0;
               echo \$percentage;
             ")
-            echo "## Coverage Report (PHP ${{ matrix.php-version }} - ${{ matrix.database.type }} ${{ matrix.database.version }})" >> $GITHUB_STEP_SUMMARY
+            echo "## Coverage Report (PHP ${{ matrix.php-version }})" >> $GITHUB_STEP_SUMMARY
             echo "**Coverage: ${COVERAGE}%**" >> $GITHUB_STEP_SUMMARY
             echo "COVERAGE_PERCENTAGE=${COVERAGE}" >> $GITHUB_ENV
           else
@@ -228,7 +208,7 @@ jobs:
           script: |
             const coverage = process.env.COVERAGE_PERCENTAGE;
             if (coverage) {
-              const body = `## 📊 Coverage Report (PHP ${{ matrix.php-version }} - ${{ matrix.database.type }} ${{ matrix.database.version }})
+              const body = `## 📊 Coverage Report (PHP ${{ matrix.php-version }})
             
               **Coverage: ${coverage}%**
             
