--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -51,7 +51,6 @@ RUN echo "date.timezone = Europe/Berlin" > /usr/local/etc/php/conf.d/timezone.in
     && echo "post_max_size = 100M" > /usr/local/etc/php/conf.d/post-size.ini
 
 # Php Error Logging
-
 RUN echo "error_reporting = E_ALL" > /usr/local/etc/php/conf.d/error-reporting.ini \
     && echo "display_errors = On" >> /usr/local/etc/php/conf.d/error-reporting.ini \
     && echo "log_errors = On" >> /usr/local/etc/php/conf.d/error-reporting.ini \
@@ -66,6 +65,10 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 WORKDIR /var/www/html
 
 COPY --from=composer:2.2 /usr/bin/composer /usr/local/bin/composer
+
+# Install PHP CS Fixer globally
+RUN composer global require friendsofphp/php-cs-fixer \
+    && ln -s /root/.composer/vendor/bin/php-cs-fixer /usr/local/bin/php-cs-fixer
 
 RUN sed -i 's|DocumentRoot /var/www/html|DocumentRoot /var/www/html/source|g' /etc/apache2/sites-available/000-default.conf \
     && sed -i '/<VirtualHost \*:80>/a <Directory /var/www/html/source>\n    Options Indexes FollowSymLinks\n    AllowOverride All\n    Require all granted\n</Directory>' /etc/apache2/sites-available/000-default.conf
