--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,20 +13,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup PHP 8.2
+      - name: 🐘 Setup PHP 8.2
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
 
-      - name: Get PHP-CS-Fixer
+      - name: ⬇️ Download PHP-CS-Fixer
         run: |
           wget -q https://github.com/FriendsOfPHP/PHP-CS-Fixer/releases/download/v3.66.0/php-cs-fixer.phar -O php-cs-fixer.phar
           chmod +x php-cs-fixer.phar
           sudo mv php-cs-fixer.phar /usr/local/bin/php-cs-fixer
-          php-cs-fixer --version
 
-      - name: Run PHP-CS-Fixer check
-        run: php-cs-fixer check
+      - name: ℹ️ Show PHP-CS-Fixer version
+        run: php-cs-fixer --version
+
+      - name: 💅 Run Code Style Check (PHP-CS-Fixer)
+        run: php-cs-fixer fix --dry-run --diff --ansi
 
   test:
     runs-on: ubuntu-latest
@@ -51,30 +53,29 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup PHP ${{ matrix.php-version }}
+      - name: 🐘 Setup PHP ${{ matrix.php-version }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
           extensions: mbstring, xml, ctype, json, tokenizer, pdo, pdo_mysql, mysqli
           coverage: pcov
 
-      - name: Install Composer 2.2
+      - name: ⬇️ Install Composer 2.2
         run: |
+          echo "::group::Install Composer"
           php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
           php composer-setup.php --version=2.2.21
           php -r "unlink('composer-setup.php');"
           sudo mv composer.phar /usr/local/bin/composer
           composer --version
+          echo "::endgroup::"
 
-      - name: Set dynamic version based on branch
+      - name: 🏷 Set Dynamic Composer Root Version
         run: |
           BRANCH_NAME="${{ github.ref_name }}"
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             BRANCH_NAME="${{ github.head_ref }}"
           fi
-          
-          echo "Branch name: $BRANCH_NAME"
-          
           if [[ "$BRANCH_NAME" == "main" ]]; then
             VERSION="1.4.x-dev"
           elif [[ "$BRANCH_NAME" == *"1.4"* ]]; then
@@ -84,11 +85,10 @@ jobs:
           else
             VERSION="1.4.x-dev"
           fi
-          
           echo "COMPOSER_ROOT_VERSION=$VERSION" >> $GITHUB_ENV
           echo "Using version: $VERSION"
 
-      - name: Cache Composer packages
+      - name: 📦 Cache Composer Dependencies
         id: composer-cache
         uses: actions/cache@v4
         with:
@@ -97,114 +97,68 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-php-${{ matrix.php-version }}-
 
-      - name: Copy config files
+      - name: 🔧 Copy CI Config Files
         run: |
           cp .env.ci .env
           cp source/config.inc.php.dist source/config.inc.php
-          
-          cat .env
 
-      - name: Install dependencies
+      - name: 📥 Install Composer Dependencies
         env:
           COMPOSER_ROOT_VERSION: ${{ env.COMPOSER_ROOT_VERSION }}
-        run: composer install --prefer-dist --no-progress
-
-
-
-      - name: Install theme
         run: |
-          echo "${YELLOW}Installing Wave theme...${NC}"
+          echo "::group::Composer Install"
+          composer install --prefer-dist --no-progress
+          echo "::endgroup::"
 
-          # Check if theme is already installed
+      - name: 🎨 Install Wave Theme
+        run: |
+          echo "::group::Wave Theme Installation"
           if [ -d "source/Application/views/wave" ] && [ "$(ls -A source/Application/views/wave)" ]; then
-            echo "Wave theme appears to be already installed, skipping"
-            return 0
+            echo "Wave theme already installed, skipping"
+            exit 0
           fi
-
-          # Download theme
-          echo "Downloading theme from GitHub..."
-          wget -q https://github.com/o3-shop/wave-theme/archive/refs/heads/main.zip -O main.zip || handle_error "Failed to download theme"
-
-          # Extract theme
-          echo "Extracting theme..."
-          unzip -q main.zip || handle_error "Failed to extract theme archive"
-
-          # Copy theme files
-          echo "Copying theme files to appropriate directories..."
-          mkdir -p source/out/ || handle_error "Failed to create out directory"
-          cp -r wave-theme-main/out/* source/out/ || handle_error "Failed to copy theme out files"
-
-          mkdir -p source/Application/views/wave || handle_error "Failed to create theme views directory"
+          wget -q https://github.com/o3-shop/wave-theme/archive/refs/heads/main.zip -O main.zip
+          unzip -q main.zip
+          mkdir -p source/out/
+          cp -r wave-theme-main/out/* source/out/
+          mkdir -p source/Application/views/wave
           rm -rf wave-theme-main/out
-          cp -r wave-theme-main/* source/Application/views/wave || handle_error "Failed to copy theme view files"
+          cp -r wave-theme-main/* source/Application/views/wave
+          rm -rf wave-theme-main main.zip
+          echo "Wave theme installed"
+          echo "::endgroup::"
 
-          # Clean up
-          echo "Cleaning up temporary files..."
-          rm -rf wave-theme-main
-          rm main.zip
-
-          echo "${GREEN}Wave theme installed successfully${NC}"
-
-      - name: Wait for MariaDB
+      - name: ⏳ Wait for MariaDB (Ready Check)
         run: |
           until mysqladmin ping -h 127.0.0.1 -P 3306 -u root -proot --silent; do
             echo 'Waiting for MariaDB...'
             sleep 1
           done
 
-      - name: Setup database
-        run: |
-          mysql -h 127.0.0.1 -P 3306 -u root -proot -e "CREATE DATABASE IF NOT EXISTS o3shop_test;"
+      - name: 🗄️ Create Test Database
+        run: mysql -h 127.0.0.1 -P 3306 -u root -proot -e "CREATE DATABASE IF NOT EXISTS o3shop_test;"
 
-      - name: Run PHPUnit tests with coverage
+      - name: ✅ Run PHPUnit (with Coverage)
         continue-on-error: true
         run: |
+          echo "::group::PHPUnit"
           CURRENT_DIR=$(pwd)
-          echo "Current directory: $CURRENT_DIR"
-
           php $CURRENT_DIR/vendor/bin/phpunit \
-          --bootstrap $CURRENT_DIR/vendor/o3-shop/testing-library/bootstrap.php \
-          -c $CURRENT_DIR/tests/phpunit.xml \
-          $CURRENT_DIR/tests/Unit \
-          --colors=always \
-          --coverage-clover="$CURRENT_DIR/coverage.xml" \
-          --coverage-html="$CURRENT_DIR/coverage-html/" || exit 0
+            --bootstrap $CURRENT_DIR/vendor/o3-shop/testing-library/bootstrap.php \
+            -c $CURRENT_DIR/tests/phpunit.xml \
+            $CURRENT_DIR/tests/Unit \
+            --colors=always \
+            --coverage-clover="$CURRENT_DIR/coverage.xml" \
+            --coverage-html="$CURRENT_DIR/coverage-html/" || exit 0
+          echo "::endgroup::"
 
-      - name: Find coverage files
-        run: |
-          echo "Searching for coverage files..."
-          find /home/runner/work -name "coverage.xml" -type f 2>/dev/null || echo "No coverage.xml found"
-          find /home/runner/work -name "coverage-html" -type d 2>/dev/null || echo "No coverage-html directory found"
-          
-          echo "Files in current directory:"
-          ls -la
-          
-          echo "Files in tests directory:"
-          ls -la tests/ || echo "No tests directory"
-      - name: Check coverage files
-        run: |
-          echo "Checking for coverage files..."
-          if [ -f coverage.xml ]; then
-            echo "✅ coverage.xml exists"
-            ls -la coverage.xml
-          else
-            echo "❌ coverage.xml does not exist"
-          fi
-          
-          if [ -d coverage-html ]; then
-            echo "✅ coverage-html directory exists"
-            ls -la coverage-html/
-          else
-            echo "❌ coverage-html directory does not exist"
-          fi
-
-      - name: Upload coverage HTML report
+      - name: ☁️ Upload Coverage Report (HTML)
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report-php-${{ matrix.php-version }}
           path: coverage-html/
 
-      - name: Generate coverage summary
+      - name: 📝 Generate Coverage Summary
         run: |
           if [ -f coverage.xml ]; then
             COVERAGE=$(php -r "
@@ -222,7 +176,7 @@ jobs:
             echo "No coverage file found"
           fi
 
-      - name: Comment coverage on PR
+      - name: 💬 Comment Coverage on PR
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
@@ -230,13 +184,12 @@ jobs:
             const coverage = process.env.COVERAGE_PERCENTAGE;
             if (coverage) {
               const body = `## 📊 Coverage Report (PHP ${{ matrix.php-version }})
-            
+
               **Coverage: ${coverage}%**
-            
+
               ${coverage >= 80 ? '✅ Great coverage!' : coverage >= 60 ? '⚠️ Coverage could be improved' : '❌ Low coverage'}
-            
+
               [View detailed coverage report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})`;
-            
               github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
