--- a/.env.ci
+++ b/.env.ci
@@ -23,7 +23,7 @@ O3SHOP_CONF_ADMINSSLURL=""
 
 ## MISC
 O3SHOP_CONF_LOG_LEVEL="error" #Log Levels: emergency, alert, critical, error, warning, notice, info, debug
-O3SHOP_CONF_LOG_DIR="/../logs" # starting from O3SHOP_CONF_SHOPDIR
+O3SHOP_CONF_LOG_DIR="log" # starting from O3SHOP_CONF_SHOPDIR
 O3SHOP_CONF_DEBUG=0
 O3SHOP_CONF_ADMINEMAIL=""
 O3SHOP_CONF_SKIPVIEWUSAGE=0
