--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -184,13 +184,13 @@ jobs:
           if [ -f junit.xml ]; then
             FAILURES=$(xmllint --xpath "count(//testcase[failure])" junit.xml 2>/dev/null || echo "0")
             ERROR_OUTPUT=$(
-              xmllint --xpath '//testcase[failure]/..' junit.xml 2>/dev/null | tr '\n' ' ' | perl -ne '
+              xmllint --xpath '//testcase[failure]' junit.xml 2>/dev/null | tr '\n' ' ' | perl -ne '
               while (/<testcase\b([^>]*)>/g) {
-              my $attr = $1;
-              my ($class) = $attr =~ /\bclass="([^"]*)"/;
-              my ($name)  = $attr =~ /\bname="([^"]*)"/;
-              print "$class"."::"."$name\n" if $class && $name;
-            }
+                my $attr = $1;
+                my ($class) = $attr =~ /\bclass="([^"]*)"/;
+                my ($name)  = $attr =~ /\bname="([^"]*)"/;
+                print "$class"."::"."$name\n" if $class && $name;
+              }
               '
             )
 
