--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ composer.lock
 /var/generated/generated_services.yaml
 docker/database/data
 docker/mailpit/data
-coverage/*
+coverage
 
 .php-cs-fixer.cache
 
