--- a/composer.json
+++ b/composer.json
@@ -103,7 +103,7 @@
             }
         },
         "branch-alias": {
-            "dev-main": "1.5-dev",
+            "dev-main": "1.5-dev"
         }
     },
     "config": {
