--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,11 @@ on:
   pull_request:
     branches: ['**']
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   cs-fixer:
     runs-on: ubuntu-latest
