--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -312,7 +312,7 @@ jobs:
       - name: 💬 Post Consolidated PR Comment
         uses: actions/github-script@v7
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_O3 }}
+          GITHUB_TOKEN: ${{ secrets.CUSTOM_PAT }}
         with:
           script: |
             const fs = require('fs');
