--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: ['**']
-  pull_request:
+  pull_request_target:
     branches: ['**']
 
 permissions:
@@ -276,7 +276,7 @@ jobs:
   aggregate-results:
     needs: [cs-fixer, test]
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request_target'
     
     steps:
       - name: 📥 Download Code Style Results
@@ -284,31 +284,31 @@ jobs:
         with:
           name: cs-fixer-result
           path: ./cs-results
-          
+
       - name: 📥 Download Test Results
         uses: actions/download-artifact@v4
         with:
           name: test-result-7.4
           path: ./test-results
-          
+
       - name: 📥 Download Test Results 8.0
         uses: actions/download-artifact@v4
         with:
           name: test-result-8.0
           path: ./test-results
-          
+
       - name: 📥 Download Test Results 8.1
         uses: actions/download-artifact@v4
         with:
           name: test-result-8.1
           path: ./test-results
-          
+
       - name: 📥 Download Test Results 8.2
         uses: actions/download-artifact@v4
         with:
           name: test-result-8.2
           path: ./test-results
-          
+
       - name: 💬 Post Consolidated PR Comment
         uses: actions/github-script@v7
         env:
@@ -345,9 +345,9 @@ jobs:
                   const status = result.tests_failed === 'true' ? '❌' : '✅';
                   const coverage = parseFloat(result.coverage) || 0;
                   const coverageStatus = coverage >= 80 ? '✅' : coverage >= 60 ? '⚠️' : '❌';
-                  
+            
                   commentBody += `${status} **PHP ${result.php_version}**: Coverage ${result.coverage}% ${coverageStatus}\n`;
-                  
+            
                   if (result.tests_failed === 'true' && result.failed_tests) {
                     hasFailures = true;
                     commentBody += `   Failed tests: ${result.failed_tests}\n`;
